<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kev.projetkevloic.View.home.MainActivity">


    <Button
        android:id="@+id/button4"
        android:layout_width="409dp"
        android:layout_height="195dp"
        android:layout_marginBottom="-9dp"
        android:layout_marginLeft="1dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="OpenObservations"
        android:text="@string/observations"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="409dp"
        android:layout_height="195dp"
        android:layout_marginLeft="-41dp"
        android:layout_marginTop="-8dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="OpenOiseaux"
        android:text="@string/oiseaux"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="409dp"
        android:layout_height="195dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="204dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="OpenOrnithologue"
        android:text="@string/ornithologue"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
