<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="com.example.kev.projetkevloic.View.show.show_ornitho">





    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Username"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/canton"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/age"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/password"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnRetour"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="45dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="Retour"
                android:text="@string/Retour"
                android:textColor="@android:color/white" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="5">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
               />

            <Spinner
                android:id="@+id/editText2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                 />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:ems="10"
                />


            <Button
                android:id="@+id/button5"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="55dp"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/ok"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
